[package]
name = "probando_tablas"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.20.1"
egui_extras = "0.20.0"
egui = "0.20.0"
sqlite = "0.30.3"
native-dialog = "0.6.3"
prettytable-rs = "0.9.0"